<resources>
    <string name="app_name">"VELES"</string>
    <string name="prev_week">"Прошлая"</string>
    <string name="next_week">"Следующая"</string>

    <string name="action_add">Добавить</string>
    <string name="action_refresh">Обновить</string>
    <string name="firm_name">Название фирмы</string>
    <string name="firm_address">Адрес фирмы</string>
    <string name="firm_notice">Примечание</string>
    <string name="item_class">Вид товара: </string>
    <string name="item_name">Наименование товара</string>
    <string name="item_shelftime">Срок годности</string>
    <string name="item_price">Цена</string>
    <string name="days">сут.</string>
    <string name="measure">руб./кг.</string>
    <string name="send_email">Отправить</string>
    <string name="settings">Настройки</string>
    <string name="emails">emails:</string>
    <string name="email1_ya_ru_email2_ya_ru">email1@ya.ru, email2@ya.ru</string>
    <string name="category">Категория товара</string>
</resources>
