<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_navigation_dialog_client_name"
        android:inputType="text"
        android:text="@string/firm_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_navigation_dialog_client_address"
        android:text="@string/firm_address"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_navigation_dialog_client_commentary"
        android:inputType="text"
        android:text="@string/firm_notice" />

</LinearLayout>