<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_navigation_dialog_item_text_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_class"
                android:textColor="@color/mainText"/>

            <Spinner
                android:id="@+id/activity_navigation_dialog_item_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_navigation_dialog_item_name"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:inputType="text" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_navigation_dialog_item_shelftime"
                android:text="@string/item_shelftime"
                android:layout_weight="1"
                android:textAlignment="center"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/days"
                android:id="@+id/activity_navigation_dialog_item_shelftime_text"
                android:textColor="@color/mainText"
                android:layout_weight="2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_navigation_dialog_item_price"
                android:layout_weight="1"
                android:text="@string/item_price"
                android:textAlignment="center"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/measure"
                android:id="@+id/activity_navigation_dialog_item_price_text"
                android:textColor="@color/mainText"
                android:layout_weight="2" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>